chore: fix alignment

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -40,7 +40,7 @@ svg, path {
 
 .top {
  margin-top: calc(50vh - 5rem);
- margin-bottom: calc(50vh - 12.2rem);
+ margin-bottom: calc(50vh - 10rem);
  p {
   &:first-of-type {
    font-size: 4rem;
